REGRESSION (177368): Some tests started to immediately time out https://bugs.webkit.org/show_bug.cgi?id=139826

Reviewed by Daniel Bates.

Tools:

* WebKitTestRunner/InjectedBundle/InjectedBundle.cpp: (WTR::InjectedBundle::done):
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp: (WTR::InjectedBundlePage::dump):
Move invalidateWaitToDumpWatchdogTimer() call from dump() to done(). When a test
ends in a load failure, we don't dump, so we used to leak the timer.

* WebKitTestRunner/InjectedBundle/TestRunner.cpp: (WTR::TestRunner::notifyDone):
Added a comment.

LayoutTests:

* platform/wk2/TestExpectations: The culprit was this test that I unskipped to see
whether it passes. It in fact does pass, so let's remove the expectation entirely.



Canonical link: https://commits.webkit.org/157761@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177598 268f45cc-cd09-0410-ab3c-d52691b4dbfc